Add support for importing/exporting local modules (#1332)
* Add runFilesInContext

* Set up test suite for imported file transformer

* Rename function to stripLocationInfo & add comments for elaboration

* Wrap program body of imported files in a FunctionDeclaration node

* Add return statement to end of function declaration

* Limit scope of variables in transformImportedFile test suite

* Extract out common assertion logic into assertASTsAreEquivalent

* Allow ExportNamedDeclarations from Source 2 onwards

* Remove ExportNamedDeclaration disallowed syntax tests

* Handle ExportNamedDeclaration in interpreter

* Handle identifiers in ExportNamedVariables when transpiling

* Remove ExportNamedDeclaration nodes when transpiling

* Handle ExportNamedDeclaration & ExportSpecifier in stdlib parse

* Add stdlib parse test case for parsing named export declarations

* Handle ExportNamedDeclarations when validating identifiers

* Update allowed syntax tests for named declaration exports in Source 2+

* Add exported name to identifier mapping to returned list

* Add test cases to check that exported names are returned

* Add support for exporting names in {}-notation & relevant test case

* Add support for renaming of exported names & relevant test case

* Allow ExportDefaultDeclarations from Source 2 onwards

* Remove ExportDefaultDeclaration disallowed syntax tests

* Handle ExportDefaultDeclaration in stdlib parse

* Add stdlib parse test case for parsing default export declarations

* Remove ExportDefaultDeclaration nodes when transpiling

* Throw error when export AST nodes are evaluated in interpreter

Since we handle exports as a pre-processing step, after which all
export-related AST nodes are removed, export AST nodes should never
be evaluated by the interpreter. We throw an error if export AST
nodes are evaluated in the interpreter as a sanity check.

* Revert handling of identifiers in ExportNamedDeclarati

--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "testRegex": "/__tests__/.*\\.ts$",
     "testPathIgnorePatterns": [
       "/dist/",
-      ".*benchmark.*"
+      ".*benchmark.*",
+      ".*/utils\\.ts"
     ],
     "coveragePathIgnorePatterns": [
       "/dist/",
