--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@babel/parser": "^7.19.4",
     "@joeychenofficial/alt-ergo-modified": "^2.4.0",
+    "@ts-morph/bootstrap": "^0.18.0",
     "@types/estree": "0.0.52",
     "acorn": "^8.0.3",
     "acorn-class-fields": "^1.0.0",
