--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,10 @@ jobs:
           exit 1
         fi
         exit 0
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
