added more tests for SchemeParser, coverage should now ignore scm/slang

--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
       "/dist/",
       "/node_modules/",
       "/src/typings/",
-      "/src/utils/testing.ts"
+      "/src/utils/testing.ts",
+      "/src/scm-slang"
     ],
     "reporters": [
       "default",
