Add scm-slang to js-slang (#1402)
* Add py-slang support to js-slang

* Add Python chapters

* added scm-slang but without base environment

* scm-slang implemented without build errors

* Implemented SchemeParser class, prepared createContext for scheme prelude

* Added encoding for Scheme idenifiers

* updated scm-slang version: base64 encoding

* resolved issue with booleans in scheme

* Updated scm-slang

* Resolved a small bug that rendered lambda syntax inevaluable in js-slang

* Implemented preludes of Scheme 1 and 2

* refactoring scheme in index.ts

* Added FULL_TS to types

* Removed all mention of scm-slang in the transpiler and index. scm-slang is now fully contained in the SchemeParser class.

* Removed unnecessary console.log

* prepare for errors

* Modifying createcontext, removed all py-slang logic

* Updated scm=slang

* Updated scm-slang

* scm-slang should have no linting issues now

* scm-slang ready for first PR

* added github action to pull submodules

* ignore scm-slang test files

* ignore scm-slang wholly

* "Fixed dotted lists, improved representations"

* improved representation of data types, added first tests

* removed unnecessary line

* shifted the scm-slang to be consistent with py-slang

* added FULL_PYTHON chapter to be consistent with py-slang

* added tests for SchemeParser

* updated eslint and prettier ignore

* scm-slang and SchemeParser chapter identification systems now more robust

* added more tests for SchemeParser, coverage should now ignore scm/slang

* prettier didn't like some of the tests

* Changed end-user representation of values and errors for Scheme

* Added tests on scheme encoder and decoder

* Added tests on scheme encoder and decoder

---------

Co-authored-by: Ken Jin <28750310+Fidget-Spinner@users.noreply.github.com>
Co-authored-by: Martin Henz <henz@comp.nus.edu.sg>

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "acorn-walk": "^8.0.0",
     "astring": "^1.4.3",
     "gpu.js": "^2.10.4",
+    "js-base64": "^3.7.5",
     "lodash": "^4.17.20",
     "node-getopt": "^0.3.2",
     "source-map": "0.7.3",
@@ -111,6 +112,7 @@
       "/node_modules/",
       "/src/typings/",
       "/src/utils/testing.ts",
+      "/src/scm-slang",
       "/src/py-slang/"
     ],
     "reporters": [
