Fix broken tests

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
       "ts",
       "js"
     ],
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
     "transform": {
       "\\.ts$": "ts-jest",
       "\\.js$": "babel-jest"
