Fix SourceMapConsumer not working with tests

--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
       "ts",
       "js"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ],
     "transform": {
       "\\.ts$": "ts-jest",
       "\\.js$": "babel-jest"
