--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
     "@types/jest": "^29.0.0",
     "@types/lodash.assignin": "^4.2.6",
     "@types/lodash.clonedeep": "^4.5.6",
