--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
   "exclude": [
     "src/stdlib/metacircular-interpreter",
     "src/stdlib/**/*.js",
+    "src/__tests__/**",
+    "jest.*.*s",
     "node_modules",
     "dist",
     "sicp_publish"
