--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
   "exclude": [
     "src/stdlib/metacircular-interpreter",
     "src/stdlib/**/*.js",
-    "src/__tests__/**",
+    "src/**/__tests__/**",
+    "src/**/__mocks__/**",
     "jest.*.*s",
     "node_modules",
     "dist",
