--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "src/stdlib/**/*.js",
     "node_modules",
     "dist",
-    "sicp_publish"
+    "sicp_publish",
   ],
   "types": [
     "typePatches",
