Add files to avoid line ending issues

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "printWidth": 100,
   "parser": "typescript",
   "trailingComma": "none",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
