--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,6 +26,9 @@ jobs:
           exit 1
         fi
         exit 0
+    - name: Install dependencies (apt)
+      run: |
+        sudo apt-get install -y --no-install-recommends libxi-dev libgl1-mesa-dev
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
