--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "eslint": "eslint --ext \".ts,.tsx\" src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
-    "test": "jest",
-    "test-coverage": "jest --coverage",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test-coverage": "test --coverage",
     "docs": "yarn jsdoc && yarn autocomplete",
     "jsdoc": "./scripts/jsdoc.sh",
     "autocomplete": "node ./scripts/updateAutocompleteDocs.js",
     "build_sicp_package": "./scripts/build_sicp_package.sh",
     "publish_sicp_package": "./scripts/publish_sicp_package.sh",
-    "benchmark": "jest --runInBand --testPathPattern='.*benchmark.*' --testPathIgnorePatterns='/dist/'",
+    "benchmark": "test --runInBand --testPathPattern='.*benchmark.*' --testPathIgnorePatterns='/dist/'",
     "prepare": "husky install"
   },
   "devDependencies": {
