--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "lodash": "^4.17.20",
     "node-getopt": "^0.3.2",
     "source-map": "0.7.3",
-    "xmlhttprequest-ts": "^1.0.1"
+    "xmlhttprequest-ts": "^1.0.1",
+    "yarn": "^1.22.21"
   },
   "resolutions": {
     "**/gl": "^6.0.2"
@@ -75,6 +76,8 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "ace-builds": "^1.4.12",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
     "eslint": "^7.11.0",
