--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "**/gl": "^6.0.2"
   },
   "scripts": {
-    "build": "yarn docs && tsc --build --force",
-    "build:slang": "tsc --build --force",
+    "build": "yarn docs && yarn build:slang",
+    "build:slang": "tsc --project tsconfig.prod.json",
     "eslint": "eslint --ext \".ts,.tsx\" src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
