Fix issue where module loaders would refuse to try and load modules after encountering an error the first time

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 *.js
 !docs/jsdoc/templates/**/*.js
 !docs/lib/**/*.js
+!src/modules/loader/__tests__/testResolver.js
 *.map
 dist/
 .idea/
