--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.19.4",
+    "@commander-js/extra-typings": "^12.0.0",
     "@joeychenofficial/alt-ergo-modified": "^2.4.0",
     "@ts-morph/bootstrap": "^0.18.0",
     "@types/estree": "0.0.52",
@@ -40,6 +41,7 @@
     "acorn-loose": "^8.0.0",
     "acorn-walk": "^8.0.0",
     "astring": "^1.4.3",
+    "commander": "^12.0.0",
     "gpu.js": "^2.16.0",
     "js-base64": "^3.7.5",
     "lodash": "^4.17.20",
@@ -73,8 +75,8 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "ace-builds": "^1.4.12",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
@@ -87,9 +89,9 @@
     "jest-html-reporter": "^3.2.0",
     "jsdoc": "3.6.11",
     "jsdom": "^19.0.0",
-    "prettier": "^2.1.2",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.9.0"
   },
   "jest": {
     "snapshotFormat": {
