Update apt sources before installing dependencies
Ensures that CI dependencies can be installed, fixing workflow errors
once sources get outdated.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,6 +28,7 @@ jobs:
         exit 0
     - name: Install dependencies (apt)
       run: |
+        sudo apt-get update && \
         sudo apt-get install -y --no-install-recommends libxi-dev libgl1-mesa-dev
     - name: Setup Node
       uses: actions/setup-node@v4
