--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,17 +9,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Install dependencies (apt)
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install -y --no-install-recommends \
+          texlive texlive-fonts-extra texlive-lang-cjk latexmk \
+          libxi-dev libgl1-mesa-dev
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: yarn
-      - name: Install TeX Live
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y texlive texlive-fonts-extra texlive-lang-cjk latexmk
-          sudo apt-get install -y --no-install-recommends libxi-dev libgl1-mesa-dev
-      - name: Fetch Yarn dependencies
+      - name: Install yarn dependencies
         run: yarn install --frozen-lockfile
       - name: Build
         run: |
