--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -39,6 +39,7 @@ jobs:
           submodules: recursive
       - name: Install dependencies (apt)
         run: |
+          sudo apt-get update && \
           sudo apt-get install -y --no-install-recommends libxi-dev libgl1-mesa-dev
       - name: Setup Node.js
         uses: actions/setup-node@v4
