--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,7 +35,7 @@ jobs:
         node-version: 20
         cache: yarn
     - run: yarn install --frozen-lockfile
-    - run: yarn build
+    - run: yarn build --force
     - run: yarn format:ci
     - run: yarn eslint
     - run: yarn test-coverage
