--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "astring": "^1.4.3",
     "gpu.js": "^2.16.0",
     "js-base64": "^3.7.5",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "node-getopt": "^0.3.2",
     "source-map": "0.7.3",
     "xmlhttprequest-ts": "^1.0.1"
@@ -68,8 +68,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
-    "@types/lodash.assignin": "^4.2.6",
-    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
