--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "jest-html-reporter": "^3.2.0",
     "jsdoc": "3.6.11",
     "jsdom": "^19.0.0",
-    "prettier": "^2.1.2",
+    "peggy": "^4.0.2",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.0.0",
     "typescript": "^4.0.3"
   },
