--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "dom"
     ],
     "sourceMap": true,
-    "allowJs": false,
+    "allowJs": true,
     "removeComments": false,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
@@ -34,6 +34,8 @@
     "node_modules",
     "dist",
     "sicp_publish",
+    "docs/**/*.js",
+    "scripts/*.js"
   ],
   "types": [
     "typePatches",
