--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "scripts": {
     "build": "yarn docs && tsc --build --force",
-    "build:slang": "tsc --build --force",
+    "build:go": "peggy src/go-slang/parser/*.pegjs",
+    "build:slang": "yarn build:go && tsc --build --force",
     "eslint": "eslint --ext \".ts,.tsx\" src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
