--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "escodegen": "^2.0.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "husky": "^8.0.1",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
