--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -37,6 +37,11 @@ jobs:
         with:
           ref: master
           submodules: recursive
+      - name: Update submodules
+        run: |
+          git rm --cached src/scm-slang
+          git submodule add https://github.com/source-academy/scm-slang src/alt-langs/scheme/scm-slang
+          git submodule update --init --recursive
       - name: Install dependencies (apt)
         run: |
           sudo apt-get update && \
