--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -14,12 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: master
-      - name: Update submodules
-        run: |
-          git rm --cached src/scm-slang
-          git submodule add https://github.com/source-academy/scm-slang src/alt-langs/scheme/scm-slang
-          git submodule sync --recursive
-          git submodule update --init --recursive	  
+          submodules: recursive
       - name: Verify version has changed
         # We use jq as `npm pkg get version` returns a quoted string
         run: |
