Remove xmlhttprequest-ts

--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
     "node-getopt": "^0.3.2",
-    "source-map": "0.7.3",
-    "xmlhttprequest-ts": "^1.0.1"
+    "source-map": "0.7.3"
   },
   "resolutions": {
     "**/gl": "^6.0.2"
