--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,8 +13,7 @@ jobs:
         run: |
           sudo apt-get update && \
           sudo apt-get install -y --no-install-recommends \
-          texlive texlive-fonts-extra texlive-lang-cjk latexmk latex-cjk-all \
-          libxi-dev libgl1-mesa-dev
+          texlive texlive-fonts-extra texlive-lang-cjk latexmk latex-cjk-all
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
