Update git submodules to use relative path to handle both ssh and https

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/alt-langs/scheme/scm-slang"]
 	path = src/alt-langs/scheme/scm-slang
-	url = https://github.com/source-academy/scm-slang
+	url = ../../source-academy/scm-slang.git
 [submodule "src/py-slang"]
 	path = src/py-slang
-	url = https://github.com/source-academy/py-slang
+	url = ../../source-academy/py-slang.git
