--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,9 @@ jobs:
     - name: Install dependencies (apt)
       run: |
         sudo apt-get update && \
-        sudo apt-get install -y --no-install-recommends libxi-dev libgl1-mesa-dev
+        sudo apt-get install -y --no-install-recommends \
+        libxi-dev libgl1-mesa-dev \
+        texlive texlive-fonts-extra texlive-lang-cjk latexmk latex-cjk-all
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
@@ -42,6 +44,8 @@ jobs:
     - run: yarn test-coverage
       env:
         CI: true
+    - name: Check that docs build
+      run:  yarn jsdoc prepare
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
