--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   "files": [
     "dist"
   ],
-  "bin": {
-    "js-slang": "dist/repl/index.js"
-  },
+  "bin": "dist/repl/index.js",
   "dependencies": {
     "@babel/parser": "^7.19.4",
     "@commander-js/extra-typings": "^12.0.1",
@@ -46,11 +44,6 @@
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
     "source-map": "0.7.3"
-  },
-  "resolutions": {
-    "**/gl": "^8.0.2",
-    "**/string-width": "^4.2.0",
-    "**/strip-ansi": "^6.0.0"
   },
   "scripts": {
     "build": "yarn docs && yarn build:slang",
@@ -132,5 +125,6 @@
         }
       ]
     ]
-  }
+  },
+  "packageManager": "yarn@4.4.0"
 }
