--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
     "ts-jest": "^29.0.0",
     "typescript": "^4.0.3"
   },
+  "resolutions": {
+    "gl": "^8.0.2"
+  },
   "jest": {
     "snapshotFormat": {
       "escapeString": true,
