Replace deprecated flag

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         node-version: 20
         cache: yarn
-    - run: yarn install --frozen-lockfile
+    - run: yarn install --immutable
     - run: yarn build
     - run: yarn format:ci
     - run: yarn eslint
