--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "build": "yarn docs && yarn build:slang",
     "build:slang": "tsc --project tsconfig.prod.json",
-    "eslint": "eslint --ext \".ts,.tsx\" src",
+    "eslint": "eslint src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
     "test": "jest",
@@ -72,14 +72,12 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
     "ace-builds": "^1.4.12",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.11.0",
     "husky": "^8.0.1",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
@@ -88,7 +86,8 @@
     "jsdom": "^19.0.0",
     "prettier": "^2.1.2",
     "ts-jest": "^29.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "typescript-eslint": "^8.8.1"
   },
   "jest": {
     "snapshotFormat": {
