Fix bug where cleaning docs would remove the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 node_modules
 *.js
 !eslint.config.js
+
+# docs
 !docs/jsdoc/templates/**/*.js
 !docs/lib/**/*.js
+docs/source
+
 *.map
 dist/
 .idea/
