Replace docs scripts with javascript code

--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "docs": "yarn jsdoc && yarn autocomplete",
-    "jsdoc": "./scripts/jsdoc.sh",
-    "autocomplete": "node ./scripts/updateAutocompleteDocs.js",
+    "docs": "node ./scripts/docs.mjs docs",
+    "jsdoc": "node ./scripts/docs.mjs",
+    "autocomplete": "node ./scripts/docs.mjs autocomplete",
     "build_sicp_package": "./scripts/build_sicp_package.sh",
     "publish_sicp_package": "./scripts/publish_sicp_package.sh",
     "benchmark": "jest --runInBand --testPathPattern='.*benchmark.*' --testPathIgnorePatterns='/dist/'",
