--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   "files": [
     "dist"
   ],
-  "bin": {
-    "js-slang": "dist/repl/index.js"
-  },
+  "bin": "dist/repl/index.js",
   "dependencies": {
     "@babel/parser": "^7.19.4",
     "@commander-js/extra-typings": "^12.0.1",
@@ -46,9 +44,6 @@
     "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
     "source-map": "0.7.3"
-  },
-  "resolutions": {
-    "**/gl": "^8.1.6"
   },
   "scripts": {
     "build": "yarn docs && yarn build:slang",
