--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
-    "ace-builds": "^1.39.0",
+    "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
     "eslint": "^8.57.0",
