--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
-    "ace-builds": "^1.4.12",
+    "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
     "eslint": "^8.57.0",
@@ -78,7 +78,7 @@
     "jest-html-reporter": "^3.2.0",
     "jsdoc": "3.6.11",
     "jsdom": "^19.0.0",
-    "prettier": "^2.1.2",
+    "prettier": "^3.5.2",
     "ts-jest": "^29.0.0",
     "typescript": "^4.0.3",
     "typescript-eslint": "^8.8.1"
