--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "eslint": "eslint src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
-    "test": "jest",
-    "test-coverage": "jest --coverage",
+    "test": "node ./scripts/run_jest.mjs",
+    "test-coverage": "test --coverage",
     "docs": "node ./scripts/docs.mjs docs",
     "jsdoc": "node ./scripts/docs.mjs",
     "autocomplete": "node ./scripts/docs.mjs autocomplete",
