--- a/package.json
+++ b/package.json
@@ -85,6 +85,14 @@
     "typescript": "^4.0.3",
     "typescript-eslint": "^8.8.1"
   },
+  "devEngines": {
+    "packageManager": {
+      "name": "yarn",
+      "version": "^4.6.0",
+      "onFail": "error"
+    }
+  },
+  "packageManager": "yarn@4.6.0",
   "jest": {
     "snapshotFormat": {
       "escapeString": true,
@@ -126,6 +134,5 @@
       ]
     ],
     "prettierPath": null
-  },
-  "packageManager": "yarn@4.6.0"
+  }
 }
