--- a/renovate.json
+++ b/renovate.json
@@ -1,16 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base", ":dependencyDashboard", "group:allNonMajor", ":label(dependencies)"
-  ],
-  "major": {
-    "dependencyDashboardApproval": true
-  },
+  "extends": ["config:recommended", ":dependencyDashboard", ":label(dependencies)"],
   "packageRules": [
-	  {
-		  "matchPackagePatterns": ["*"],
-		  "rangeStrategy": "update-lockfile"
-	  }
+    {
+      "rangeStrategy": "update-lockfile",
+      "matchPackageNames": ["*"],
+      "minimumReleaseAge": "5 days"
+    }
   ],
   "enabledManagers": ["npm"]
 }
