--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,7 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 100,
-  "parser": "typescript",
   "trailingComma": "none",
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "auto"
 }
