Add types for mathjs

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/babel__core": "^7",
     "@types/jest": "^29.0.0",
     "@types/lodash": "^4.14.202",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
     "ace-builds": "~1.17.0",
