--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "noEmit": false
+    "noEmit": false,
+    "skipLibCheck": true
   },
   // Excludes are overwritten when using extends, so we
   // list all the excludes again
