--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint": "eslint src",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
-    "test": "node ./scripts/run_jest.mjs",
+    "test": "vitest",
     "test-coverage": "yarn test --coverage",
     "docs": "node ./scripts/docs.mjs docs",
     "jsdoc": "node ./scripts/docs.mjs",
@@ -90,47 +90,5 @@
       "onFail": "error"
     }
   },
-  "packageManager": "yarn@4.6.0",
-  "jest": {
-    "snapshotFormat": {
-      "escapeString": true,
-      "printBasicPrototype": true
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "\\.ts$": "ts-jest",
-      "\\.js$": "babel-jest"
-    },
-    "testEnvironment": "jsdom",
-    "testRegex": "/__tests__/.*\\.ts$",
-    "testPathIgnorePatterns": [
-      "/dist/",
-      "/src/alt-langs/scheme/scm-slang",
-      ".*benchmark.*",
-      "/__tests__/(.*/)?utils\\.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/dist/",
-      "/node_modules/",
-      "/src/typings/",
-      "/src/utils/testing.ts",
-      "/src/alt-langs/scheme/scm-slang",
-      "/src/py-slang/"
-    ],
-    "reporters": [
-      "default",
-      [
-        "./node_modules/jest-html-reporter",
-        {
-          "pageTitle": "Test Report",
-          "includeFailureMsg": true,
-          "includeConsoleLog": true
-        }
-      ]
-    ],
-    "prettierPath": null
-  }
+  "packageManager": "yarn@4.6.0"
 }
