--- a/package.json
+++ b/package.json
@@ -67,13 +67,14 @@
     "@types/mathjs": "^9.4.2",
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vitest/ui": "3.2.4",
     "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
     "escodegen": "^2.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jest": "^29.0.1",
     "globals": "^16.0.0",
     "husky": "^9.0.0",
     "jsdoc": "3.6.11",
