Change to excluding alt-lang tests only

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "target": "es2020"
   },
   "exclude": [
-    "src/alt-langs/scheme/scm-slang",
-    "src/py-slang",
+    "src/alt-langs/scheme/scm-slang/**/__tests__",
+    "src/py-slang/tests",
     "src/stdlib/metacircular-interpreter",
     "src/stdlib/**/*.js",
     "node_modules",
