--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@types/node": "^20.0.0",
     "@types/offscreencanvas": "^2019.7.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/eslint-plugin": "^1.3.4",
+    "@vitest/ui": "3.2.4",
     "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
     "eslint": "^9.0.0",
