--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@commander-js/extra-typings": "^12.0.1",
     "@joeychenofficial/alt-ergo-modified": "^2.4.0",
     "@ts-morph/bootstrap": "^0.18.0",
-    "@types/estree": "^1.0.5",
     "acorn": "^8.8.2",
     "acorn-class-fields": "^1.0.0",
     "acorn-loose": "^8.0.0",
@@ -61,6 +60,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.5",
     "@types/lodash": "^4.14.202",
     "@types/mathjs": "^9.4.2",
     "@types/node": "^20.0.0",
@@ -70,16 +70,15 @@
     "@vitest/ui": "3.2.4",
     "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.0.0",
     "husky": "^9.0.0",
     "jsdoc": "3.6.11",
     "jsdom": "^19.0.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.0.0",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.8.1",
+    "typescript-eslint": "^8.40.0",
     "vitest": "^3.2.4"
   },
   "devEngines": {
@@ -89,47 +88,5 @@
       "onFail": "error"
     }
   },
-  "packageManager": "yarn@4.6.0",
-  "jest": {
-    "snapshotFormat": {
-      "escapeString": true,
-      "printBasicPrototype": true
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "\\.ts$": "ts-jest",
-      "\\.js$": "babel-jest"
-    },
-    "testEnvironment": "jsdom",
-    "testRegex": "/__tests__/.*\\.ts$",
-    "testPathIgnorePatterns": [
-      "/dist/",
-      "/src/alt-langs/scheme/scm-slang",
-      ".*benchmark.*",
-      "/__tests__/(.*/)?utils\\.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/dist/",
-      "/node_modules/",
-      "/src/typings/",
-      "/src/utils/testing.ts",
-      "/src/alt-langs/scheme/scm-slang",
-      "/src/py-slang/"
-    ],
-    "reporters": [
-      "default",
-      [
-        "./node_modules/jest-html-reporter",
-        {
-          "pageTitle": "Test Report",
-          "includeFailureMsg": true,
-          "includeConsoleLog": true
-        }
-      ]
-    ],
-    "prettierPath": null
-  }
+  "packageManager": "yarn@4.6.0"
 }
