--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -15,6 +15,7 @@
     "sicp_publish",
     "src/**/__tests__/**",
     "src/**/__mocks__/**",
+    "src/py-slang/src/tests",
     "src/utils/testing",
     "vitest.config.ts"
   ]
