--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "dependencies": {
     "@babel/parser": "^7.19.4",
     "@commander-js/extra-typings": "^14.0.0",
-    "@joeychenofficial/alt-ergo-modified": "^2.4.0",
     "@ts-morph/bootstrap": "^0.18.0",
     "acorn": "^8.8.2",
     "acorn-class-fields": "^1.0.0",
@@ -46,7 +45,7 @@
   "scripts": {
     "build": "yarn docs && yarn build:slang",
     "build:slang": "tsc --project tsconfig.prod.json",
-    "eslint": "eslint src scripts",
+    "eslint": "eslint --concurrency=auto src scripts",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
     "test": "vitest",
@@ -62,15 +61,13 @@
   "devDependencies": {
     "@types/estree": "^1.0.5",
     "@types/lodash": "^4.14.202",
-    "@types/mathjs": "^9.4.2",
     "@types/node": "^20.0.0",
-    "@types/offscreencanvas": "^2019.7.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.4",
     "@vitest/ui": "3.2.4",
     "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
-    "eslint": "^9.34.0",
+    "eslint": "^9.35.0",
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.0.0",
     "husky": "^9.0.0",
