--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "@types/estree": "^1.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.0.0",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.4",
     "@vitest/eslint-plugin": "^1.3.4",
-    "@vitest/ui": "3.2.4",
+    "@vitest/ui": "^4.0.4",
     "ace-builds": "~1.17.0",
     "coveralls": "^3.1.0",
     "eslint": "^9.35.0",
@@ -76,7 +76,7 @@
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.4"
   },
   "devEngines": {
     "packageManager": {
