Override the message property, but also enable noImplicitOverride to prevent accidental overriding

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     // "isolatedModules": true, Temporarily disabled
     "noEmit": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
